# monitor

tools/inspection/: pyproject.toml
tools/inspection/script/ai-gateway/: script.py
tools/inspection/script/asr-tingwu/: script.py
tools/inspection/script/chat-fusion/: script.py
tools/inspection/script/language-identify/: script.py
tools/inspection/script/text2music-suno/: script.py
